Refactoring String resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <!-- Navigation -->
     <string name="about">About</string>
     <string name="albums">Albums</string>
+    <string name="app_preferences">App preferences</string>
     <string name="artists">Artists</string>
     <string name="home">Home</string>
     <string name="play_queue">Play queue</string>
@@ -34,6 +35,7 @@
     <string name="done">Done</string>
     <string name="edit_album">Edit album info</string>
     <string name="edit_music">Edit music info</string>
+    <string name="manage_custom_images">Manage custom images</string>
     <string name="more_settings">More settings</string>
     <string name="ok">OK</string>
     <string name="options_menu">Options menu</string>
@@ -53,22 +55,37 @@
     <string name="album">Album</string>
     <string name="album_title">Album title</string>
     <string name="album_year">Album year</string>
+    <string name="all_songs">All songs</string>
     <string name="artist">Artist</string>
+    <string name="artist_information">Artist information</string>
     <string name="artist_name">Artist name</string>
+    <string name="artist_songs">View artist\'s songs</string>
+    <string name="custom_image">Custom images</string>
+    <string name="disc_number">Disc %1$s</string>
+    <string name="displayed_song">1 song</string>
+    <string name="displayed_songs">%1$d songs</string>
+    <string name="edit_artist">Edit artist info</string>
     <string name="favourites">Favourites</string>
     <string name="library">My Library</string>
+    <string name="more">More</string>
     <string name="most_played">Most played</string>
+    <string name="n_albums">%1$d albums</string>
     <string name="n_plays">%1$d plays</string>
+    <string name="night">Night</string>
     <string name="no_results">No results found</string>
+    <string name="one_album">1 album</string>
     <string name="one_play">1 play</string>
     <string name="played_n_times">Played %1$d times</string>
     <string name="played_one_time">Played 1 time</string>
     <string name="playlist_name">Playlist name</string>
     <string name="recently_played">Recently played</string>
     <string name="search_hint">Search music</string>
+    <string name="select_playlist">Select a playlist or create a new one</string>
     <string name="song_day">Song of the day</string>
+    <string name="song_of_the_day_will_be_displayed_here">Song of the day will appear here once your library is built</string>
     <string name="title">Title</string>
     <string name="track">Track</string>
+    <string name="use_custom_image">Use custom image</string>
     <string name="year">Year</string>
 
     <!-- Accessibility -->
@@ -93,7 +110,34 @@
     <string name="transition_title">transition_title</string>
 
     <!-- Toast notifications -->
+    <string name="added_to_favourites">Added to favourites</string>
+    <string name="album_name_cannot_be_empty">The album name field cannot be empty</string>
+    <string name="album_updated">Album updated!</string>
+    <string name="album_year_cannot_be_empty">The album year field cannot be empty</string>
+    <string name="artist_name_cannot_be_empty">The artist name field cannot be empty</string>
+    <string name="artist_name_not_changed">The artist name has not been changed</string>
+    <string name="artist_updated">Artist updated!</string>
     <string name="changes_applied">Your changes will be applied to the next round of animations.</string>
+    <string name="empty_play_queue">The play queue is empty.</string>
+    <string name="image_set">Image set!</string>
+    <string name="item_saved">%1$s saved</string>
+    <string name="item_added_play_queue">%1$s has been added to the play queue</string>
+    <string name="no_custom_image">Custom image could not be found</string>
+    <string name="no_songs_found">No songs were found for %1$s</string>
+    <string name="play_queue_shuffled">Play queue shuffled</string>
+    <string name="play_queue_unshuffled">Play queue unshuffled</string>
+    <string name="playlist_already_exists">A playlist with that name already exists</string>
+    <string name="playlist_contains_zero_songs">There are no songs in this playlist</string>
+    <string name="playlist_name_cannot_be_empty">The playlist name field cannot be empty</string>
+    <string name="playlist_updated">Playlist updated!</string>
+    <string name="removed_from_favourites">Removed from favourites</string>
+    <string name="repeat_mode_all">Repeat the play queue</string>
+    <string name="repeat_mode_none">Repeat mode off</string>
+    <string name="repeat_mode_one">Repeat the current song</string>
+    <string name="song_added_playlist">%1$s has been added to %2$s</string>
+    <string name="songs_added_play_queue">Your songs have been added to the play queue</string>
+    <string name="songs_added_playlist">Your songs have been added to %1$s</string>
+    <string name="storage_permission_needed">Storage access is required to load your music library</string>
 
     <!-- Animation labels -->
     <string name="animals">Animals</string>
@@ -117,73 +161,11 @@
     <string name="space">Space</string>
 
 
-    <string name="song_of_the_day_will_be_displayed_here">Song of the day will appear here once your library is built</string>
-
-
-    <string name="more">More</string>
-    <string name="all_songs">All songs</string>
-    <string name="use_custom_image">Use custom image</string>
-    <string name="custom_image">Custom images</string>
-    <string name="no_custom_image">Custom image could not be found</string>
-    <string name="custom_image_not_found">Custom image cannot be found</string>
-    <string name="manage_custom_images">Manage custom images</string>
-    <string name="image_set">Image set!</string>
-    <string name="edit_artist">Edit artist info</string>
-    <string name="night">Night</string>
-    <string name="artist_songs">View artist\'s songs</string>
-    <string name="artist_information">Artist information</string>
-    <string name="queue">Queue</string>
-    <string name="restrictions_may_apply">Restrictions may apply - click here to learn more.</string>
-
-    <string name="select_playlist">Select a playlist or create a new one</string>
-    <string name="song_added_to_playlist">%1$s has been added to %2$s</string>
-    <string name="songs_added_to_playlist">Your songs have been added to %1$s</string>
-
-    <string name="empty_play_queue">The play queue is empty.</string>
-    <string name="play_queue_shuffled">Play queue shuffled</string>
-    <string name="play_queue_unshuffled">Play queue unshuffled</string>
-    <string name="no_songs_found">No songs were found for %1$s</string>
-
-    <string name="storage_permission_needed">Storage access is required to load your music library</string>
-
-    <string name="added_to_favourites">Added to favourites</string>
-    <string name="removed_from_favourites">Removed from favourites</string>
-
-    <string name="item_added_play_queue">%1$s has been added to the play queue</string>
-    <string name="songs_added_play_queue">Your songs have been added to the play queue</string>
-
-    <string name="repeat_mode_none">Repeat mode off</string>
-    <string name="repeat_mode_all">Repeat the play queue</string>
-    <string name="repeat_mode_one">Repeat the current song</string>
-
-    <string name="item_saved">%1$s saved</string>
-    <string name="playlist_already_exists">A playlist with that name already exists</string>
-    <string name="playlist_name_cannot_be_empty">The playlist name field cannot be empty</string>
-    <string name="playlist_contains_zero_songs">There are no songs in this playlist</string>
-    <string name="playlist_updated">Playlist updated!</string>
-
-    <string name="artist_name_cannot_be_empty">The artist name field cannot be empty</string>
-    <string name="artist_name_not_changed">The artist name has not been changed</string>
-    <string name="artist_updated">Artist updated!</string>
-
-    <string name="album_name_cannot_be_empty">The album name field cannot be empty</string>
-    <string name="album_year_cannot_be_empty">The album year field cannot be empty</string>
-    <string name="album_updated">Album updated!</string>
-
-    <string name="displayed_song">1 song</string>
-    <string name="displayed_songs">%1$d songs</string>
-    <string name="disc_number">Disc %1$s</string>
-
-    <string name="app_preferences">App preferences</string>
-
     <string name="error_media_service_default">A playback error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
     <string name="error_media_service_empty_queue">A playback error has occurred. The play queue is empty.</string>
     <string name="error_media_service_player_state">A playback error has occurred. The media player must be restarted.</string>
 
     <string name="error_generic_playback">A playback error has occurred.</string>
-
-    <string name="one_album">1 album</string>
-    <string name="n_albums">%1$d albums</string>
 
     <string name="no">No</string>
     <string name="yes">Yes</string>
