--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,7 @@
     <string name="space">Space</string>
 
     <!-- Error descriptions -->
+    <string name="error_custom_animation_image_limit_reached">Sorry, you cannot set more than six images.</string>
     <string name="error_custom_image_could_not_be_found">One or more of your custom images not be found</string>
     <string name="error_generic_playback">A playback error has occurred.</string>
     <string name="error_media_service_default">A playback error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
