--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,5 +6,13 @@
     \nEl ícono de vinil utilizado como ícono de la aplicación, para el álbum faltante y el arte de la lista de reproducción, fue creado por Freepik de www.flaticon.com
     \n
     \nLos íconos de control de reproducción (reproducir, pausar, avanzar y retroceder) fueron creados por Elias Bikbulatov de www.flaticon.com</string>
-    <string name="app_name">Supernova</string>
+    <string name="app_info">Información de la aplicación</string>
+    <string name="developer">Programador</string>
+    <string name="developer_body">Esta aplicación fue desarrollada por Adam Hawke. Contacto: hello@codersguidebook.com</string>
+    <string name="about">Sobre</string>
+    <string name="albums">Álbumes</string>
+    <string name="app_preferences">Preferencias de la aplicación</string>
+    <string name="artists">Artistas</string>
+    <string name="home">Casa</string>
+    <string name="play_queue">Cola de reproducción</string>
 </resources>
