Added further translations

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -57,4 +57,61 @@
     <string name="artist_name">Nombre del artista</string>
     <string name="artist_songs">Ver las canciones del artista</string>
     <string name="custom_image">Imágenes personalizadas</string>
+    <string name="disc">Desct</string>
+    <string name="disc_number">Desct %1$s</string>
+    <string name="displayed_song">1 canción</string>
+    <string name="displayed_songs">%1$d canciones</string>
+    <string name="edit_artist">Editar información del artista</string>
+    <string name="favourites">Favoritos</string>
+    <string name="library">Mi biblioteca</string>
+    <string name="more">Más</string>
+    <string name="most_played">Más jugado</string>
+    <string name="n_albums">%1$d álbumes</string>
+    <string name="n_plays">%1$d reproducciones</string>
+    <string name="name">Nombre</string>
+    <string name="night">Noche</string>
+    <string name="no">No</string>
+    <string name="no_results">No se han encontrado resultados</string>
+    <string name="one_album">1 álbum</string>
+    <string name="one_play">1 reproducción</string>
+    <string name="played_n_times">Reproducido %1$d veces</string>
+    <string name="played_one_time">Reproducido 1 vez</string>
+    <string name="playlist_information">Información de la lista de reproducción</string>
+    <string name="playlist_name">Nombre de la lista de reproducción</string>
+    <string name="recently_played">Recientemente jugado</string>
+    <string name="search_hint">Buscar música</string>
+    <string name="search_results">Resultados de la búsqueda</string>
+    <string name="select_playlist">Seleccione una lista de reproducción o cree una nueva</string>
+    <string name="song_day">Canción del día</string>
+    <string name="song_of_the_day_will_be_displayed_here">La canción del día aparecerá aquí una vez que se cree su biblioteca de música.</string>
+    <string name="title">Título</string>
+    <string name="track">Pista</string>
+    <string name="use_custom_image">Usar imagen personalizada</string>
+    <string name="year">Año</string>
+    <string name="yes">Sí</string>
+    <string name="album_artwork">Carátula del álbum</string>
+    <string name="album_information">Información del álbum</string>
+    <string name="close_currently_playing">Cerrar la reproducción actual</string>
+    <string name="handle_view_desc">Ícono que le permite reordenar canciones en la lista de reproducción actual.</string>
+    <string name="play_or_pause_current_track">Reproducir o pausar la pista actual</string>
+    <string name="set_album_artwork">Establecer la carátula del álbum</string>
+    <string name="shuffle_playlist">Reproducir aleatoriamente la lista de reproducción actual</string>
+    <string name="shuffle_tracks">Pistas aleatorias</string>
+    <string name="skip_ahead">Saltar una pista</string>
+    <string name="skip_back">Saltar hacia atrás una pista</string>
+    <string name="added_to_favourites">Añadido a favoritos</string>
+    <string name="album_name_cannot_be_empty">El campo del nombre del álbum no puede estar vacío</string>
+    <string name="album_updated">¡Actualizaciones de álbumes!</string>
+    <string name="album_year_cannot_be_empty">El año del álbum no puede estar vacío</string>
+    <string name="artist_name_cannot_be_empty">El nombre del artista no puede estar vacío</string>
+    <string name="artist_name_not_changed">El nombre del artista no se ha cambiado.</string>
+    <string name="artist_updated">Artista actualizado!</string>
+    <string name="changes_applied">Sus cambios se aplicarán a la siguiente ronda de animaciones.</string>
+    <string name="check_fields_not_empty">Verifique que ninguno de los campos esté vacío</string>
+    <string name="details_saved">Detalles guardados</string>
+    <string name="empty_play_queue">La cola de reproducción está vacía.</string>
+    <string name="image_set">Conjunto de imágenes</string>
+    <string name="item_saved">%1$s guardado</string>
+    <string name="item_added_play_queue">El %1$s se ha agregado a la cola de reproducción</string>
+    <string name="no_songs_found">No se encontraron canciones para %1$s</string>
 </resources>
