--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,13 +110,13 @@
     <string name="skip_back">Skip back a track</string>
 
     <!-- Transition labels -->
-    <string name="transition_back">transition_back</string>
-    <string name="transition_forward">transition_forward</string>
-    <string name="transition_image">transition_image</string>
-    <string name="transition_play">transition_play</string>
-    <string name="transition_subtitle">transition_subtitle</string>
-    <string name="transition_subtitle2">transition_subtitle2</string>
-    <string name="transition_title">transition_title</string>
+    <string name="transition_back" translatable="false">transition_back</string>
+    <string name="transition_forward" translatable="false">transition_forward</string>
+    <string name="transition_image" translatable="false">transition_image</string>
+    <string name="transition_play" translatable="false">transition_play</string>
+    <string name="transition_subtitle" translatable="false">transition_subtitle</string>
+    <string name="transition_subtitle2" translatable="false">transition_subtitle2</string>
+    <string name="transition_title" translatable="false">transition_title</string>
 
     <!-- Toast notifications -->
     <string name="added_to_favourites">Added to favourites</string>
