Added further translations

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -114,4 +114,44 @@
     <string name="item_saved">%1$s guardado</string>
     <string name="item_added_play_queue">El %1$s se ha agregado a la cola de reproducción</string>
     <string name="no_songs_found">No se encontraron canciones para %1$s</string>
+    <string name="play_queue_shuffled">La cola de reproducción se barajó</string>
+    <string name="play_queue_unshuffled">La cola de reproducción no se barajó</string>
+    <string name="playlist_already_exists">Ya existe una lista de reproducción con ese nombre</string>
+    <string name="playlist_contains_zero_songs">No hay canciones en esta lista de reproducción</string>
+    <string name="playlist_name_cannot_be_empty">El nombre de la lista de reproducción no puede estar vacío</string>
+    <string name="playlist_updated">¡Lista de reproducción actualizada!</string>
+    <string name="removed_from_favourites">Eliminado de favoritos</string>
+    <string name="repeat_mode_all">Repetir la cola de reproducción</string>
+    <string name="repeat_mode_none">Modo de repetición desactivado</string>
+    <string name="repeat_mode_one">Repetir la canción actual</string>
+    <string name="slow">Lento</string>
+    <string name="space">Espacio</string>
+    <string name="error_custom_animation_image_limit_reached">Lo sentimos, no puede establecer más de seis imágenes.</string>
+    <string name="error_custom_animation_image_not_found">No se pudo encontrar ninguna de sus imágenes personalizadas.</string>
+    <string name="error_generic_playback">Se ha producido un error de reproducción.</string>
+    <string name="error_media_service_default">Se ha producido un error de reproducción. Si el archivo de la canción se ha movido o eliminado, espere a que se actualice la biblioteca.</string>
+    <string name="error_media_service_empty_queue">Se ha producido un error de reproducción. La cola de reproducción está vacía.</string>
+    <string name="error_media_service_player_state">Se ha producido un error de reproducción. El reproductor multimedia debe reiniciarse.</string>
+    <string name="red">Rojo</string>
+    <string name="show_animations">Mostrar animaciones</string>
+    <string name="show_hide_animations">Mostrar/ocultar animaciones</string>
+    <string name="set_playlist_artwork">Establecer ilustraciones de la lista de reproducción</string>
+    <string name="song_added_playlist">%1$s ha sido agregado a %2$s</string>
+    <string name="songs_added_play_queue">Tus canciones han sido añadidas a la cola de reproducción.</string>
+    <string name="songs_added_playlist">Tus canciones han sido añadidas a %1$s</string>
+    <string name="storage_permission_needed">Se requiere acceso de almacenamiento para cargar su biblioteca de música</string>
+    <string name="animals">Animales</string>
+    <string name="animation_colour">Color</string>
+    <string name="animation_images">Imágenes</string>
+    <string name="animation_speed">Velocidad</string>
+    <string name="animations">Animaciones</string>
+    <string name="blue">Azul</string>
+    <string name="fast">Rápido</string>
+    <string name="instruments">Instrumentos musicales</string>
+    <string name="flowers">Flores</string>
+    <string name="leaves">Hojas</string>
+    <string name="mandala">Mándala</string>
+    <string name="normal">Normal</string>
+    <string name="pastel">Pastel</string>
+    <string name="playback_animations">Animaciones de reproducción</string>
 </resources>
