Added support for changing the language configuration

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -158,4 +158,6 @@
     <string name="delete_artist">Eliminar artista</string>
     <string name="delete_song">Eliminar canción</string>
     <string name="song_added_play_queue">%1$s se ha agregado a la cola de reproducción.</string>
+    <string name="english">Inglés</string>
+    <string name="spanish">Español</string>
 </resources>
