Added support for updating the language locale for the application's default playlists

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="displayed_song">1 song</string>
     <string name="displayed_songs">%1$d songs</string>
     <string name="edit_artist">Edit artist info</string>
-    <string name="english">English</string>
+    <string name="english" translatable="false">English</string>
     <string name="english_code" translatable="false">en</string>
     <string name="favourites">Favourites</string>
     <string name="library">My Library</string>
@@ -96,7 +96,7 @@
     <string name="select_playlist">Select a playlist or create a new one</string>
     <string name="song_day">Song of the day</string>
     <string name="song_of_the_day_will_be_displayed_here">The song of the day will appear once your library is built</string>
-    <string name="spanish">Spanish</string>
+    <string name="spanish" translatable="false">Español</string>
     <string name="spanish_code" translatable="false">es</string>
     <string name="title">Title</string>
     <string name="track">Track</string>
