--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -159,4 +159,6 @@
     <string name="default_album">Álbum desconocido</string>
     <string name="default_artist">Artista desconocido</string>
     <string name="default_title">Canción desconocida</string>
+
+    <string name="no_songs_for_artist">No se encontraron canciones para este artista.</string>
 </resources>
