--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -160,5 +160,6 @@
     <string name="default_artist">Artista desconocido</string>
     <string name="default_title">Canción desconocida</string>
 
+    <string name="no_songs_for_album">No se encontraron canciones para este álbum.</string>
     <string name="no_songs_for_artist">No se encontraron canciones para este artista.</string>
 </resources>
